add [handler]: new handler for accept request for adding in university
