# docs/swagger.json
@@ -116,6 +116,58 @@
                     }
                 }
             }
+        },
+        "/admin/personalities/access/accept": {
+            "post": {
+                "description": "Accept Request of user that want to be (student/teacher/administration)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "personalities"
+                ],
+                "summary": "Accept Request for adding in University",
+                "parameters": [
+                    {
+                        "description": "Access request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_max-main-team_backend_hackaton_MAX_internal_models_http_personalities.AcceptAccessRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized user",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -123,6 +175,33 @@
             "type": "object",
             "properties": {
                 "message": {}
+            }
+        },
+        "github_com_max-main-team_backend_hackaton_MAX_internal_models_http_personalities.AcceptAccessRequest": {
+            "type": "object",
+            "required": [
+                "role",
+                "user_id"
+            ],
+            "properties": {
+                "course_group_id": {
+                    "type": "integer"
+                },
+                "faculty_id": {
+                    "type": "integer"
+                },
+                "role": {
+                    "$ref": "#/definitions/github_com_max-main-team_backend_hackaton_MAX_internal_models_repository_personalities.RoleType"
+                },
+                "university_department_id": {
+                    "type": "integer"
+                },
+                "university_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
             }
         },
         "github_com_max-main-team_backend_hackaton_MAX_internal_models_http_personalities.AccessRequestResponse": {
