# internal/http/handlers/personalities_handler.go
@@ -3,12 +3,14 @@ package handlers
 import (
 	"context"
 	"encoding/json"
+	"fmt"
 	"net/http"
 	"strconv"
 
 	"github.com/labstack/echo/v4"
 	"github.com/max-main-team/backend_hackaton_MAX/internal/models"
 	personalities2 "github.com/max-main-team/backend_hackaton_MAX/internal/models/http/personalities"
+	"github.com/max-main-team/backend_hackaton_MAX/internal/models/repository/personalities"
 	"github.com/max-main-team/backend_hackaton_MAX/internal/services"
 	"github.com/vmkteam/embedlog"
 )
@@ -121,4 +123,58 @@ func (h *PersonalitiesHandler) GetRequests(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusOK, response)
+}
+
+// AcceptAccess godoc
+// @Summary      Accept Request for adding in University
+// @Description  Accept Request of user that want to be (student/teacher/administration)
+// @Tags         personalities
+// @Accept       json
+// @Produce      json
+// @Param        request  body   personalities2.AcceptAccessRequest  true  "Access request"
+// @Success      200   {object}  string  "ok"
+// @Failure      400   {object}  echo.HTTPError  "Invalid request body"
+// @Failure      401   {object}  echo.HTTPError  "Unauthorized user"
+// @Failure      500   {object}  echo.HTTPError  "Internal server error"
+// @Router       /admin/personalities/access/accept [post]
+func (h *PersonalitiesHandler) AcceptAccess(c echo.Context) error {
+	log := c.Get("logger").(embedlog.Logger)
+	log.Print(context.Background(), "[AcceptRequest] AcceptRequest called")
+
+	currentUser, ok := c.Get("user").(*models.User)
+	if !ok {
+		log.Errorf("[AcceptRequest] Authentication error. user not found in context")
+		return echo.NewHTTPError(http.StatusUnauthorized, "user is not authenticated")
+	}
+
+	var request personalities2.AcceptAccessRequest
+	if err := json.NewDecoder(c.Request().Body).Decode(&request); err != nil {
+		log.Errorf("[AcceptRequest] failed to decode request body: %v", err)
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	var err error
+	switch request.UserType {
+	case personalities.Student:
+		if request.UniversityDepartmentID == nil {
+			err = fmt.Errorf("university department id is required for student")
+		}
+	case personalities.Admin:
+		if request.UniversityID == nil {
+			err = fmt.Errorf("university id is required for admin")
+		}
+	}
+
+	if err != nil {
+		log.Errorf("[AcceptRequest] failed to validate request body: %v", err)
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	err = h.personServ.AcceptAccess(context.TODO(), request)
+	if err != nil {
+		log.Errorf("[AcceptRequest] failed to send access request: %v", err)
+		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	}
+
+	return c.JSON(http.StatusOK, "ok")
 }
